--- a/_posts/2019-12-27-the-us-narrative-today.html
+++ b/_posts/2019-12-27-the-us-narrative-today.html
@@ -1609,107 +1609,107 @@ stories:
   domain: http://www.mvtimes.com
   link: https://www.mvtimes.com/2019/12/26/first-day-brickyard/
 images:
-- name: sand-hand-sand-hand-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-dark-rain.jpg
-- name: la-muse-firetruck-bright-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-firetruck-bright-sun.jpg
-- name: machine-road-machine-road-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-yellow-paper.jpg
-- name: old-cabin-oldcabin-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-ww2-dresden.jpg
-- name: bf-skinner-statue-capital-cannon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-capital-cannon.jpg
-- name: school-clouds-church-clouds-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-diego-rivera1.jpg
-- name: udnie-DSC_0079.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0079.jpg
-- name: fence-mexico-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-green-zuma.jpg
-- name: flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-gan-vogh.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-alien-goggles.jpg
-- name: old-door-lock-old-door-lock-2-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-purple-storm.jpg
-- name: gears-4882162452-fa3126b38d-b-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
-- name: wind-mills-windmills-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-blue-electricity.jpg
-- name: bordercrossing-bordercrossing-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
-- name: oldtrain-oldtrain-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sunday.jpg
-- name: old-house-oldhouse-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colorful-blocks.jpg
-- name: aws-s3-stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
-- name: capital-battle-capitolbattle-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-kand-two.jpg
-- name: catacombs-catacombs-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-deep-connections.jpg
-- name: aws-s3-tunnel-tunnel-purp-paper-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-tunnel-tunnel-purp-paper-still.jpg
-- name: catacombs-catacombs-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-dali.jpg
-- name: nazi-invasion-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-mirrors-hotel.jpg
-- name: old-house-oldhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-aqua.jpg
-- name: rain-princess-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-watching-cars.jpg
-- name: copper-circuit-DSC_0035-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0035-2.jpg
-- name: statue-of-liberty-front-view-statueofliberty-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-monet-one.jpg
-- name: blossombar-aqua-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-24-99.jpg
-- name: nyc-flag-nycflag-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-spagetti-accident.jpg
-- name: window-window-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-kandinsky-bv.jpg
-- name: old-barn-old-barn-1500-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-dream.jpg
-- name: trucksilo-trucksilo-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-deep-connections.jpg
-- name: flower-barbed-wire-flower-barbed-wire-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-gred-mash.jpg
-- name: ellis-island-ellisisland-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-umberto-bocc.jpg
-- name: oldhouse-granaryfield-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-green-zuma.jpg
-- name: bf-skinner-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-grain-ship-docking-grass.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-- name: stories-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cargo-ship-on-sea-copper-circuit.jpg
-- name: art-museum-art-museum-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-electricity.jpg
-- name: dc-statue-dcstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-alien-goggles.jpg
-- name: windowmountain-window-mountain-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-kand-two.jpg
-- name: san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-graham-sutherland.jpg
-- name: cargo-ship-cargo-ship-on-sea-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-really-hot.jpg
-- name: trucksilo-trucksilo-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-brush.jpg
-- name: wind-mills-windmills-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-clean-view.jpg
-- name: nazi-invasion-miami-beach-walkway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-miami-beach-walkway.jpg
-- name: amusement-park-amusement-park-2-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-deep-connections.jpg
-- name: nazi-invasion-desktop-laptop-chair.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-desktop-laptop-chair.jpg
-- name: bf-skinner-small-lighthouse_36556509232_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-small-lighthouse_36556509232_o.jpg
-- name: oldsmallboat-oldsmallboat-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-really-hot.jpg
-- name: cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-rainbow-festival.jpg
+- name: blossombar-neo-instinct-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-neo-instinct-file-00-00-24-99.jpg
+- name: server-cloud-server-racks-door-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-smoking-cigarette.jpg
+- name: nazi-invasion-white-house-lawn-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-white-house-lawn-view.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purple-pond.jpg
+- name: bf-skinner-subway-underground_35904617894_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-subway-underground_35904617894_o.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+- name: white-house-lawn-white-house-lawn-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-space-pizza.jpg
+- name: old-door-lock-old-door-lock-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-kandinsky-bv.jpg
+- name: crow_dali_three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_three.jpg
+- name: blossombar-crafty-painting-file-00-00-50-32.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-32.jpg
+- name: border-fence-border-fence-on-hill-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-ww2-dresden.jpg
+- name: nazi-invasion-small-lighthouse_36556509232_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-small-lighthouse_36556509232_o.jpg
+- name: oldroad-old-road-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-soul.jpg
+- name: trucksilo-trucksilo-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-marcel-duchamp.jpg
+- name: copper-circuit-early-computer-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-early-computer-bletchley.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
+- name: la-muse-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hotel-down-sidewalk.jpg
+- name: carry-load-carryload-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colorful-blocks.jpg
+- name: locked-up-steam-lock-up-steam-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-space-pizza.jpg
+- name: crow-crow-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-electricity.jpg
+- name: powerlines-power-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-internet-numbers.jpg
+- name: stalin-time-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-shipping-people-walking.jpg
+- name: oldbarn-oldbarn-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-diego-rivera1.jpg
+- name: oldcabin-oldcabin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dali-two.jpg
+- name: copper-circuit-train-car_35892468014_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-car_35892468014_o.jpg
+- name: power-lines-power-lines-empty-space-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-rainbow-festival.jpg
+- name: old-door-lock-old-door-lock-2-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-sunday.jpg
+- name: old-barn-old-barn-1500-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sunday.jpg
+- name: nazi-invasion-san-francisco-wharf-clock.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-wharf-clock.jpg
+- name: stalin-time-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-flowers-diamon-creek.jpg
+- name: fence-fence-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-spagetti-accident.jpg
+- name: crow-crow-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-two.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
+- name: oldhouse-granaryfield-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-emily-carr.jpg
+- name: amusement-park-amusement-park-2-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-attack-planes.jpg
+- name: mosaic-face-mosaic-face-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-kand-two.jpg
+- name: windowmountain-window-mountain-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dali-three.jpg
+- name: gypsymosaic-gypsy-eyes-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-emily-carr.jpg
+- name: copper-circuit-down-the-line-harlem.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-down-the-line-harlem.jpg
+- name: yuma-bank-yuma-bak-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colored-circuits.jpg
+- name: old-door-lock-old-door-lock-2-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-pablo-blue.jpg
+- name: ellis-island-ellis-island-room-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-emily-carr.jpg
+- name: blossombar-really-hot-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-24-99.jpg
+- name: bordercrossing-bordercrossing-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-circuit.jpg
+- name: mistywoods-babyfoot-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-aqua.jpg
+- name: nazi-invasion-subway-underground_35904617894_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-subway-underground_35904617894_o.jpg
+- name: nyc-flag-nycflag-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-creativity.jpg
+- name: subway-subway-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-rain.jpg
+- name: berlinwall-DSC-0084-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gred-mash.jpg
+- name: miamibeach-miamibeach-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crunch-paper.jpg
+- name: nazi-invasion-city-waterfront-path.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-waterfront-path.jpg
 ---
 Christmas Festivities Begin In West Bank Town Of Bethlehem.&nbsp;Like Us On Facebook.&nbsp;Moroccan YouTuber Sentenced To Prison, Journalist Detained.&nbsp;Chow, Babys Christmas Card.&nbsp;Woman Walks Up And Down Jefferson Looking For Wedding Ring Lost At Trenton Parade.&nbsp;Powerful Storm Pounds Southern California With Rain, Snow.&nbsp;Pickaway County Recylcing Locations.&nbsp;QUESTuary Is Coming In January.&nbsp;
